@@ -17,13 +17,13 @@ static int vals[] = {
 	143, 143, 143, 143, 143, 143,
 	143, 143, 143, 143, 143, 143,
 	254, 254, 254, 254, 254, 254,
-	255, 254, 254, 253, 252, 252,
-	453, 453, 454, 454, 454, 454,
-	454, 453, 453, 452, 451, 451,
-	808, 809, 809, 809, 808, 806,
-	805, 805, 808, 810, 810, 810,
-	1439, 1441, 1441, 1437, 1436, 1437,
-	1441, 1441, 1436, 1435, 1440, 1442
+	255, 255, 255, 254, 254, 253,
+	453, 453, 453, 454, 454, 454,
+	454, 454, 454, 453, 453, 452,
+	808, 808, 809, 809, 809, 808,
+	805, 805, 805, 805, 808, 810,
+	1439, 1439, 1441, 1441, 1437, 1436,
+	1437, 1437, 1442, 1441, 1436, 1436
 };
 
 TEST(test_effect_fine_vibrato)
